WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
242224
The "Around the World" carousel is broken on
https://focal-theme-carbon.myshopify.com/
https://bugs.webkit.org/show_bug.cgi?id=242224
Summary
The "Around the World" carousel is broken on https://focal-theme-carbon.mysho...
Simon Fraser (smfr)
Reported
2022-06-30 21:03:45 PDT
Load
https://focal-theme-carbon.myshopify.com/
and scroll down to the "Around the World" section. Click the prev/next arrows, and note how it fails to scroll to the right place.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-07-05 10:59:33 PDT
<
rdar://problem/96453957
>
Simon Fraser (smfr)
Comment 2
2022-08-16 13:31:40 PDT
During the scroll animation, layout runs and calls `FrameView::removeScrollableArea()` so we stop animating it.
Simon Fraser (smfr)
Comment 3
2022-08-16 14:04:46 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/3377
EWS
Comment 4
2022-08-16 17:08:03 PDT
Committed
253493@main
(ca608f18f089): <
https://commits.webkit.org/253493@main
> Reviewed commits have been landed. Closing PR #3377 and removing active labels.
Ryosuke Niwa
Comment 5
2022-08-17 00:52:38 PDT
This patch broke iOS builds.
Ryosuke Niwa
Comment 6
2022-08-17 01:05:59 PDT
Re-opening for pull request
https://github.com/WebKit/WebKit/pull/3396
Ryosuke Niwa
Comment 7
2022-08-17 01:08:28 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/3397
EWS
Comment 8
2022-08-17 01:15:29 PDT
Committed
253511@main
(711178d9ca19): <
https://commits.webkit.org/253511@main
> Reviewed commits have been landed. Closing PR #3397 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug