Cherry-pick ca608f18f089. rdar://problem/103539448

The "Around the World" carousel is broken on https://focal-theme-carbon.myshopify.com/
    https://bugs.webkit.org/show_bug.cgi?id=242224
    <rdar://96453957>

    Reviewed by Tim Horton.

    251454@main fixed a bug where an animated programmatic scroll on an `overflow:hidden` element failed to scroll
    because we didn't register the ScrollableArea with the FrameView.

    However, if layout runs while the scroll is in progress, then we unregister the ScrollableArea, which
    prematurely stops the scrolling. Fix by having `RenderLayerScrollableArea::updateScrollableAreaSet()`
    check to see if an animated scroll is active before unregistering.

    * LayoutTests/fast/scrolling/mac/smooth-scroll-with-overflow-hidden-and-layout-expected.txt: Added.
    * LayoutTests/fast/scrolling/mac/smooth-scroll-with-overflow-hidden-and-layout.html: Copied from LayoutTests/fast/scrolling/mac/smooth-scroll-with-overflow-hidden.html.
    * LayoutTests/fast/scrolling/mac/smooth-scroll-with-overflow-hidden.html: Remove a redundant rule.
    * Source/WebCore/platform/ScrollableArea.h: m_hasActiveScrollAnimation was unused, so remove it.
    * Source/WebCore/rendering/RenderLayerScrollableArea.cpp:
    (WebCore::RenderLayerScrollableArea::updateScrollableAreaSet):

    Canonical link: https://commits.webkit.org/253493@main

Canonical link: https://commits.webkit.org/252432.1020@safari-7614.4.6.0-branch